# git-unified-diff-parse

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
examples/: README.md  explore_parser.py
src/git_unified_diff_parse/: __init__.py  diff_builder.py  models.py  parser.py  tokenizer.py  tokens.py
tests/: test_parser.py
